@@ -18,7 +18,9 @@
  ******************************************************************************/
 package be.ppareit.hidebar;
 
+import java.util.ArrayList;
 import java.util.LinkedList;
+import java.util.Map;
 
 import android.app.Service;
 import android.content.Context;
@@ -200,10 +202,15 @@ public class RestoreSystembarService extends Service {
     private void sendBackEvent() {
         Log.v(TAG, "sendBackEvent");
         try {
-            new ProcessBuilder()
-                    .command("su", "-c",
-                            "LD_LIBRARY_PATH=/vendor/lib:/system/lib input keyevent 4")
-                    .redirectErrorStream(true).start();
+            // get the existing environment
+            ArrayList<String> envlist = new ArrayList<String>();
+            Map<String, String> env = System.getenv();
+            for (String envName : env.keySet()) {
+                envlist.add(envName + "=" + env.get(envName));
+            }
+            String[] envp = (String[]) envlist.toArray(new String[0]);
+            Runtime.getRuntime().exec(new String[] { "su", "-c", "input keyevent 4" },
+                    envp);
         } catch (Exception e) {
             e.printStackTrace();
         }
